--- a/lab2/style.css
+++ b/lab2/style.css
@@ -1,4 +1,11 @@
 
+p::first-letter {
+
+  font-size: 1.5em;
+}
+dt{
+  color: yellow;
+}
 p {
     color: white;
 }
@@ -19,8 +26,13 @@ td{
     text-align: center;
 }
 a{
+  text-decoration: none;
     color: red;
 }
+
+a:visited { text-decoration: none; }
+a:hover { text-decoration: underline; }
+a:active { text-decoration: underline; }
 
 img.thumbnail {
    width: 300px;
@@ -46,4 +58,8 @@ img.thumbnail {
 img.validator {
    width: 100px;
    height: 50px;
+}
+ol {
+  display: flex;
+  flex-direction: column-reverse;
 }
